--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "UX-Media",
+  "name": "With UX-Media you can create simple Projects and Progress of the Project!",
   "icons": [
     {
       "src": "favicon.ico",
